# app-dirs-rs

./: Cargo.toml  README.md
src/: common.rs  lib.rs  utils.rs
src/imp/: mod.rs
src/imp/platform/: macos.rs  redox.rs
