[package]
name = "app_dirs"
version = "2.0.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

description = "Put your app's data in the right place on every platform [DEPRECATED]"
repository = "https://github.com/AndyBarron/app-dirs-rs"
readme = "README.md"
keywords = ["application", "data", "storage", "location", "directory"]
license = "MIT"
